2004-08-19  Dan Winship  <danw@novell.com>

	* lib/e2k-autoconfig.c (e2k_autoconfig_get_context): Make the "is
	this really an Exchange server" checks more lenient; the current
	code fails against E2k SP2 (which people shouldn't be running any
	more, but...)
	(e2k_autoconfig_check_exchange): Try the "append /exchange if the
	path was empty" trick for E2K_AUTOCONFIG_FAILED too.

2004-08-18  Maxim Dziumanenko <mvd@mylinux.com.ua>

	* configure.in: Added uk to ALL_LINGUAS

2004-08-19  Sarfraaz Ahmed <asarfraaz@novell.com>

	* calendar/e-cal-backend-exchange.c 
	(e_cal_backend_exchange_add_timezone): This was returning an invalid
	type. This fixes #61053
	* calendar/e-cal-backend-exchange.h : Similar

2004-08-19  Sushma Rai  <rsushma@novell.com>

	* camel/camel-exchange-folder.c (transfer_messages_to): 
	Not calling cache_xfer if destination uids not found.
	Fixes #63315

2004-08-18  Ilkka Tuohela  <hile@iki.fi>

	* configure.in: Added fi to ALL_LINGUAS

2004-08-16  Dan Winship  <danw@novell.com>

	* storage/exchange-hierarchy-somedav.c (scan_subtree): Bail out if
	the subclass returns 0 urls, rather than spewing g_warnings

2004-08-15  Artur Flinta  <aflinta@cvs.gnome.org>

	* configure.in: Added pl to ALL_LINGUAS.

2004-08-13  Dan Winship  <danw@novell.com>

	* configure.in: Bump version to 1.5.93

2004-08-13  Rodney Dawes  <dobey@novell.com>

	* acinclude.m4: Revert previous EVO_LDAP_CHECK changes, aren't working
	as well as expceted and determined in testing

2004-08-13  Rodney Dawes  <dobey@novell.com>

	* acinclude.m4: Remove EVO_CHECK_LIB
	Update EVO_LDAP_CHECK to support --with-openldap-{libs,includes}
	Sync with e-d-s acinclude.m4 (Adds GTK_DOC_CHECK)

2004-08-13  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* configure.in:
	Add another krb5 headers options, fix small errors
	in previous commit.

2004-08-13  Sarfraaz Ahmed <asarfraaz@novell.com>

	* storage/exchange-delegates.c (exchange_delegates): Checking for NULL