@@ -1,3 +1,8 @@
+2004-08-20  Dan Winship  <danw@novell.com>
+
+	* addressbook/e-book-backend-gal.c: Pull up various fixes from
+	e-book-backend-ldap.c
+
 2004-08-19  Dan Winship  <danw@novell.com>
 
 	* lib/e2k-autoconfig.c (e2k_autoconfig_get_context): Make the "is
